unpackaged/ready/StudentRequest/objects/rio_ed__Program_Offering__c.object
<CustomObject>
    <fields>
        <fullName>redu_Approved_Applications__c</fullName>
        <label>Approved Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redu_Maximum_Approved_Applicant_Count__c</fullName>
        <label>Maximum Approved Applicant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redu_Program_Name_F__c</fullName>
        <formula>rio_ed__Program__r.Name</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
</CustomObject>